# MissionControl

./: .gitignore  .gitlab-ci-backend.yml  .gitlab-ci-frontend.yml  .gitlab-ci.yml  CONTRIBUTING.md  README.md  flake.nix  package-lock.json  package.json
.github/workflows/: backend.yml  docs.yml  frontend.yml  main.yml
backend/: .envrc  .gitignore  README.md  flake.nix  pyproject.toml  pyrightconfig.json
backend/app/: __init__.py  cli.py  database.py  main.py
backend/app/routers/v1/: alerts.py  cameras.py  config.py  control.py  data.py  system.py  tasks.py  telemetry.py  visualization.py
backend/app/services/: database_service.py  pointcloud_service.py
backend/app/tests/v1/: test_alerts.py  test_cameras.py  test_config.py  test_control.py  test_data.py  test_database.py  test_lint.py  test_pointcloud.py  test_system.py  test_tasks.py  test_telemetry.py  test_visualization.py
docs/: index.md  package.json
docs/.vitepress/: config.mts
docs/backend/: cli.md  database.md  index.md  routers.md  services.md
docs/contributing/: code-style.md  development-workflow.md  index.md  pull-requests.md  testing.md  widgets.md
docs/frontend/: components.md  index.md  styling.md  tilling.md
docs/general/: index.md  manual.md  setup.md
docs/public/: style.css
docs/widgets/: 2d-aerial-map-slam.md  bounding-box-for-widgets.md  camera-feed.md  index.md  machine-usage-readonly.md  nav2-target-queue.md  pointcloud.md  rosout-console.md  (+3 more)
front-end/: index.html  package-lock.json  package.json  tsconfig.json
frontend/: README.md  package-lock.json  package.json
(+74 files in other folders)
